--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
-    "react-skycons": "^0.7.0"
+    "react-skycons": "^0.7.0",
+    "react-spinners": "^0.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
