--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
     "react-skycons": "^0.7.0",
-    "react-spinners": "^0.8.0"
+    "react-spinners": "^0.8.0",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
